# wordle_qi_maggie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: api.rst  conf.py  index.md  index.rst  installation.md  usage.md
docs/source/: conf.py  index.rst
src/wordle_qi_maggie/: __init__.py  cli.py  wordle_qi_maggie.py
tests/: test_wordle_qi_maggie.py
wordle_qi_maggie/: CONTRIBUTING.md  README.md  justfile  pyproject.toml
wordle_qi_maggie/.github/: ISSUE_TEMPLATE.md
wordle_qi_maggie/docs/: index.md  installation.md  usage.md
wordle_qi_maggie/src/wordle_qi_maggie/: __init__.py
wordle_qi_maggie/tests/: __init__.py
