[tool.poetry]
name = "wordle-qi-maggie"
version = "0.1.0"
description = "A Wordle game implementation package"
authors = ["Maggie Qi <qq2144@columbia.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "wordle_qi_maggie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^1.0"
myst-parser = "^2.0"
sphinx-autodoc-typehints = "^1.0"
coverage = "^7.0"
pytest = "^7.0"
ruff = "^0.1.0"
ipdb = "^0.13.0"

[tool.poetry.scripts]
wordle_qi_maggie = "wordle_qi_maggie.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = true

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0"                                                     
sphinx-rtd-theme = "^1.0"                                           
myst-parser = "^2.0"                                                            
sphinx-autodoc-typehints = "^1.0"

